Add working bot with PandaScore and data folder

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DISCORD_TOKEN=your-discord-bot-token
 OPENAI_API_KEY=your-openai-api-key
 PANDASCORE_API_KEY=Pfu7y0iVgtRp12F_979S2aC30nLrJ1QZBf4cMz1tMWsVEt6G24o
+DISCORD_CHANNEL_ID=1376274800900833322
